need to fix remove top primitives
